# MusuemFeed

./: .gitignore  README.md
config/: feeds.canada.json
ingestion_service/: README.md  pyproject.toml
ingestion_service/app/: config.py  database.py  ingestion.py  main.py  models.py  schemas.py  scoring.py  summarisation.py
ingestion_service/tests/: test_scoring.py
wp-plugin/culture-museums-news/: README.md  culture-museums-news.php
wp-plugin/culture-museums-news/includes/: class-cmn-blocks.php  class-cmn-post-type.php  class-cmn-rest-controller.php  class-cmn-settings.php
